# rh-ove-ecosystem

./: .gitignore  404.html  README.md  TASKS.md  Taskfile.yml  index.html  mkdocs.yml  requirements.txt  rh-ove-plan.md  sitemap.xml
TASKS/: index.html
docs/: index.md
export/: RH_OVE_Architecture_Documentation.docx  RH_OVE_Complete_Documentation.docx  RH_OVE_Deployment_Documentation.docx  RH_OVE_Management_Documentation.docx  RH_OVE_Operations_Documentation.docx  RH_OVE_Project-Plan_Documentation.docx  admission-control_advanced.drawio  adr-table_advanced.drawio  disaster-recovery_advanced.drawio  end-to-end-observability_advanced.drawio  gitops_advanced.drawio  iam_advanced.drawio  overview_advanced.drawio  project-charges.csv  publishing-events-to-cmdb-siem_advanced.drawio  storage_advanced.drawio  troubleshooting_advanced.drawio  vm-backup-recovery_advanced.drawio  vm-scaling-performance_advanced.drawio  vm-template-management_advanced.drawio
inputs/: Does using an application namespace base topology.md  Does using cilium is a good idea to enhanced netwo.md  Does using rubrik to backup VM on RH OVE is a good.md  Doest RH OVE can be push event to update a Service.md  How to integrate RH OVE monitoring stack with Dyna.md  Is-it a good idea to multiplex Kubernetes Workload.md  details of OVE CRDs.md  (+12 more)
scripts/: README.md  Taskfile.yml  convert_docs_to_docx.py  convert_docs_to_docx_by_chapter.py  convert_docs_to_docx_with_filter.py  export_workload_to_xlsx.py  main.py  pyproject.toml
scripts/.task/checksum/: check  convert-to-docx  convert-to-docx-filter
(+147 files in other folders)
