[project]
name = "rh-ove-scripts"
version = "0.1.0"
description = "RH OVE Ecosystem project management and export scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts]
export-workload = "export_workload_to_xlsx:main"
